# Liquid_Level_Drone

./: .gitignore  Module2-Step1-yolo-annotations.py  Module2-Step2-yolo-filestructure.py  Module2-Step4-yolo-custom-find-me.py  Module2-llm-fun-Tello.py  README.md  data_import.py  data_prep.py  data_utils.py  drone_detect.py  drone_navigation.py  drone_utils.py  liquid.yaml  liquid_drone_documentation.rtf  output_storage.py  pc_test_with_speech.py  pc_test_without_speech.py  pyproject.toml  requirements.txt  video_avi_converter.py
dataset/: aggregated_annotations.csv
exp_result/exp_500/: res_2023-11-15_16-02-10.json  res_2023-11-15_16-28-36.json  res_2023-11-15_16-45-40.json
pc_test/: pc_test_with_speech.py  pc_test_without_speech.py
video_result/exp2-best/: video_2023-10-24_02-17-47.avi  video_2023-10-24_02-23-23.avi
zig_zag_navigation/: zig_zag_movement.py
